# emojipack

./: AGENTS.md  Emoji Pack.alfredsnippets  README.md  TODO.md  justfile  pyproject.toml
src/emojipack/: __init__.py  cli.py  comparison.py  download.py  pack.py  snippets.py
tests/: __init__.py  conftest.py  test_cli.py  test_comparison.py  test_download.py  test_pack.py  test_snippets.py
