[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emojipack"
version = "0.1.0"
description = "Generate emoji snippets packs for Alfred"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.19.2",
]

[project.scripts]
emojipack-generator = "emojipack.cli:app"

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "types-requests>=2.32.4.20250913",
]
