[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emojipack"
version = "0.1.0"
description = "Generate emoji snippets packs for Alfred"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.19.2",
]

[project.scripts]
emojipack-generator = "emojipack.cli:app"

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
    "types-requests>=2.32.4.20250913",
]

[tool.docformatter]
paths = [
    "src",
    "tests"
]
recursive = true
in-place = true
wrap-summaries = 79
wrap-descriptions = 79

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"
output-format = "grouped"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",     # no blank line required before class docstring
    "D213",     # multi-line docstring summary should start at the first line
    "S603",     # subprocess call
    "PLR2004",  # Magic value used in comparison
    "COM812",   # Missing trailing comma (disable when using formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN201",  # Missing return type for public function
    "ANN202",  # Missing return type for private function
    "S101",   # Allow assert statements in tests
    # "ARG",    # Allow unused function arguments in tests
    # "FBT",    # Ignore boolean traps in test parameters
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
