[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emojipack"
version = "0.1.0"
description = "Generate emoji snippets packs for Alfred"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.5.0",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "typer>=0.19.2",
]

[project.scripts]
emojipack = "emojipack.cli:app"

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
    "types-requests>=2.32.4.20250913",
]

[tool.docformatter]
paths = [
    "src",
    "tests"
]
recursive = true
in-place = true
wrap-summaries = 79
wrap-descriptions = 79

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"
output-format = "grouped"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",     # no blank line required before class docstring
    "D213",     # multi-line docstring summary should start at the first line
    "S603",     # subprocess call
    "PLR2004",  # Magic value used in comparison

    # Rules that should be disabled when using ruff as a formatter.
    "W191",     # tab-indentation
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "D206",     # docstring-tab-indentation
    "D300",     # triple-single-quotes
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "ISC002",   # multi-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN201",   # Missing return type for public function
    "ANN202",   # Missing return type for private function
    "S101",     # Assert statements
    "ARG",      # Unused function arguments
    # "FBT",    # Ignore boolean traps in test parameters
    "SLF001",   # Private member accessed
]

[tool.mypy]
files = ["src", "tests"]
strict = true
extra_checks = true
error_summary = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ty.terminal]
error-on-warning = true
